--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <title>React Redux Filling Form</title>
   </head>
   <body>
-    <div id="root"></div>
+    <h1>Форма для заполнения почтового бланка</h1>
+    <div id="root" ></div>
   </body>
 </html>
